--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
               // exaggeration: 1, // 標高を強調する倍率
             })
           );
-          map.setTerrain({ source: "terrainSource", exaggeration: 5 });
+          // map.setTerrain({ source: "terrainSource", exaggeration: 5 });
 
           map.addControl(
             new maplibregl.AttributionControl({
